@@ -72,6 +72,8 @@ getJSONfromFileTable.
 
 * fix(style) .name{width}: 37% -> 35%
 
+* feature(view) show(pData) -> show(pData, pCallBack)
+
 
 2012.04.22, v0.2.0
 
